# json_cold_storage_comparison

./: .gitignore  LICENSE  README.md  pyproject.toml
results/: cache.db
storage/: __init__.py  create_raw.py  diskcache.py  diskcache_zstd.py  lzma.py  mongo.py  zstandard.py
tests/: test_storage.py
